--- a/qdipsx/src/style/components/youTubeYearMenu.css
+++ b/qdipsx/src/style/components/youTubeYearMenu.css
@@ -5,6 +5,10 @@
     justify-content: center;
 }
 
+h3 {
+    text-align: center;
+}
+
 #ps11994YouTubeBox,
 #ps11995YouTubeBox,
 #ps11996YouTubeBox {
@@ -15,16 +19,16 @@
     transition: 0.2s;
 }
 
-#ps11994YouTubeBox {
+/* #ps11994YouTubeBox {
     background-image: url("../../img/youTubePS11994Button.jpg");
-}
+} */
 
 #ps11995YouTubeBox {
-    background-image: url("../../img/youTubePS11994Button.jpg");
+    background-image: url("../../img/youTubePS11995Button.jpg");
 }
 
 #ps11996YouTubeBox {
-    background-image: url("../../img/youTubePS11994Button.jpg");
+    background-image: url("../../img/youTubePS11996Button.jpg");
 }
 
 #ps11994YouTubeBox:hover {
