--- a/qdipsx/src/style/components/bottomMenu.css
+++ b/qdipsx/src/style/components/bottomMenu.css
@@ -1,8 +1,14 @@
+.bottomMenuContainer {
+    display: inline-block;
+    position: fixed;
+    z-index: 9999;
+    top: 20px;
+}
+
 .bottomMenuButton {
     background-color: gray;
     text-align: center;
     color: white;
-    display: inline-block;
     padding: 10px 15px 10px 15px;
     transition: 0.3s;
     text-decoration: none;
