--- a/qdipsx/src/style/components/crashBandicootPage.css
+++ b/qdipsx/src/style/components/crashBandicootPage.css
@@ -1,13 +1,14 @@
 .artykul {
-    width: 70%;
     text-align: justify;
+    column-gap: 30px;
+    column-width: 200px;
+    font-size: 16px;
 }
 
 .image {
-    width: 300px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
     display: block;
 }
 
@@ -15,7 +16,6 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
-    width: 35%;
     display: block;
 }
 
