--- a/qdipsx/src/style/components/kontaktForm.css
+++ b/qdipsx/src/style/components/kontaktForm.css
@@ -2,7 +2,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 6%;
+
 }
 
 .daneWejscioweFormularza {
@@ -10,4 +11,9 @@
     margin-left: auto;
     margin-right: auto;
     width: 400px;
+}
+
+#oknowiadomosci {
+    height: 200px;
+    width: 300px;
 }
