--- a/qdipsx/src/style/components/ninjaShadowOfDarknessPage.css
+++ b/qdipsx/src/style/components/ninjaShadowOfDarknessPage.css
@@ -1,10 +1,12 @@
 .artykul {
+    width: 80%;
     text-align: justify;
     column-count: 3;
     column-gap: 30px;
     column-width: 200px;
-    font-size: 16px;
+    font-size: 18px;
     margin-top: 5%;
+    margin-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -22,6 +24,15 @@
     margin-top: 15px;
     width: 100%;
     display: block;
+}
+
+.tabelaInfo {
+    width: 100%;
+}
+
+table {
+    border: 1px solid;
+    border-collapse: collapse;
 }
 
 #moreCB {
