--- a/qdipsx/src/style/pages/app.css
+++ b/qdipsx/src/style/pages/app.css
@@ -1,5 +1,5 @@
 .app {
-    margin-top: 6%;
+    margin-top: 3%;
     background-color: white;
     width: 70%;
     margin-left: 15%;
@@ -23,4 +23,54 @@ body {
 #banner {
     margin-left: auto;
     margin-right: auto;
+}
+
+#buttonsToSites {
+    display: flex;
+    margin-left: 8%;
+}
+
+#firstButton {
+    width: 250px;
+    margin-left: 2%;
+    transition: 100ms;
+}
+
+#firstImg{
+    width: 100%;
+}
+
+#firstButton:hover {
+    cursor: pointer;
+    scale: 1.05;
+}
+
+#secondButton {
+    width: 250px;
+    margin-left: 2%;
+    transition: 100ms;
+}
+
+#secondImg{
+    width: 100%;
+}
+
+#secondButton:hover {
+    cursor: pointer;
+    scale: 1.05;
+}
+
+#thirdButton {
+    width: 250px;
+    margin-left: 2%;
+    transition: 100ms;
+}
+
+#thirdImg{
+    width: 100%;
+}
+
+#thirdButton:hover {
+    cursor: pointer;
+    scale: 1.05;
 }
