--- a/qdipsx/src/style/pages/youtube.css
+++ b/qdipsx/src/style/pages/youtube.css
@@ -1,5 +1,5 @@
 .youtube {
-    margin-top: 100px;
+    margin-top: 3%;
 }
 
 #styczen,
@@ -15,6 +15,10 @@
 #listopad,
 #grudzien {
     display: none;
+}
+
+#gamesMouth {
+    text-align: center;
 }
 
 #showHidestyczen {
