--- a/qdipsx/src/style/components/GamesList.css
+++ b/qdipsx/src/style/components/GamesList.css
@@ -38,6 +38,13 @@
     margin-top: 6%;
 }
 
+#NoneAPIGamesListLess {
+    column-gap: 10px;
+    column-width: 20%;
+    text-align: left;
+    margin-top: 6%;
+}
+
 #GameListParagraph {
     margin: 0%;
 }
