--- a/qdipsx/src/style/components/GamesList.css
+++ b/qdipsx/src/style/components/GamesList.css
@@ -64,3 +64,13 @@ abbr[title] {
     text-decoration: none;
     font-weight: 600;
 }
+
+.collectionGamesLatters {
+    background-color: grey;
+    color: white;
+    margin-left: 0%;
+    margin-right: 50%;
+    padding-bottom: 3px;
+    text-align: center;
+    font-weight: 400;
+}
