--- a/qdipsx/src/style/components/articlePage.css
+++ b/qdipsx/src/style/components/articlePage.css
@@ -1,9 +1,9 @@
 .artykul {
     text-align: justify;
-    column-count: 3;
+    width: 70%;
     column-gap: 30px;
-    column-width: 200px;
-    font-size: 16px;
+    column-width: 300px;
+    font-size: 17px;
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
@@ -16,7 +16,7 @@
     display: block;
 }
 
-#logoCBF {
+.logo {
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
@@ -24,7 +24,22 @@
     display: block;
 }
 
-#moreCB {
+.logoBright {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    width: 100%;
+    display: block;
+    filter: drop-shadow(5px 5px 10px black);
+}
+
+.tabelaInfo {
+    border-collapse: collapse;
+    border: 1px solid;
+    width: 100%;
+}
+
+#more {
     display: none;
 }
 
