--- a/qdipsx/src/style/pages/socialmedia.css
+++ b/qdipsx/src/style/pages/socialmedia.css
@@ -2,5 +2,6 @@
     margin-top: 6%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
+    gap: 20px;
 }
