--- a/qdipsx/src/style/components/bottomMenu.css
+++ b/qdipsx/src/style/components/bottomMenu.css
@@ -49,3 +49,16 @@
     background-color: black;
     cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+    .bottomMenuContainer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 20px;
+        justify-content: center;
+    }
+
+    .bottomMenuButton {
+        padding: 10px 10px 10px 10px;
+    }
+}
