--- a/qdipsx/src/style/pages/arcticulesShort.css
+++ b/qdipsx/src/style/pages/arcticulesShort.css
@@ -61,3 +61,57 @@
     color: black;
     cursor: pointer;
 }
+
+@media screen and (max-width: 900px) {
+    .shortArticle {
+        width: 100%;
+        height: 10%;
+    }
+
+    #goToFullArticleButton {
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+
+    #logo {
+        width: 200px;
+    }
+
+    #logoBright {
+        width: 200px;
+    }
+
+    .logoContainer {
+        width: 200px;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .shortArticle {
+        width: 100%;
+    }
+
+    #wstep {
+        display: none;
+    }
+
+    #goToFullArticleButton {
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+
+    #logo {
+        width: 130px;
+    }
+
+    #logoBright {
+        width: 130px;
+    }
+
+    .logoContainer {
+        width: 150px;
+        height: 100%;
+    }
+}
+
