--- a/qdipsx/src/style/pages/omnie.css
+++ b/qdipsx/src/style/pages/omnie.css
@@ -4,8 +4,22 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 5%;
-    columns: 3;
+    column-count: 3;
     column-gap: 5%;
     text-indent: 15%;
     
+}
+
+@media screen and (max-width: 900px) {
+    .omnieContainer {
+        column-count: 1;
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .omnieContainer {
+        column-count: 1;
+        width: 95%;
+    }
 }
